@@ -2,23 +2,25 @@
 Hash: SHA256
 
 DIST rackspace-monitoring-0.5.4.tar.gz 30261 SHA256 07903abf29259a8e1f7f249565591ea183888cee9c3029e493a355425b1e22ce SHA512 7375e38ac5b50f1d0e449b46e27f6ed862bbd94765229d3eecd22a787f244be7493dc6b659b6923f3e31d287842ac6eb105e03f5e65b2d7716090cd94af6879f WHIRLPOOL 9fd62c33cdec07963eca4b6ea18461e0a30707e920b7c3416b80421d6200ac92875e5e3f479ed42c05e62dd0d97668a3d16165042fd77228031d55dba4bd67bb
+DIST rackspace-monitoring-0.6.0.tar.gz 30880 SHA256 51380712a58798a7f76f765de5f544380a24d02bd25e36ac3e8786068d866478 SHA512 6864313f54400f1eac929c582e72d35d10a772f159e56ac1f9e4465032f18c0608e721d9f97b224c80408fe91c3b6410af860fad6ce56a07a34bac0a59525dbd WHIRLPOOL d88231b20836db71670a2c13162ddab6f61226f747b8bc8cdba77430b5ac5718e8279c02b7846b38036ca52f79b8d0208e84e3e6e238cc10e64d5e37ac941c6b
 EBUILD rackspace-monitoring-0.5.4.ebuild 885 SHA256 e39dbb906c23e8bdb5552e5f0b5c7f7624550e0e23065d57213f16b027814dd7 SHA512 4ebd7b652c8156c24c02924852b808def5ed169a95e2bdc069e61345b375aba0a1d40482e3a3579904c6977833cc534604fe81b9edca60666a37e4047065e698 WHIRLPOOL 53ef48bcdee6871f848a6b3204ffaa41447bbc62ba18961cf59fb39c12ea290b8439b61549180f87f55723236fa738ba5b0dec15f817e8828445e2a1ecd22d2f
-MISC ChangeLog 434 SHA256 b74a10986fbd1fbc19e393a73afd1230d9a99e23915bb5bdeb880cb7d5e0361e SHA512 5734e88e0fb00fdf5d716c8cdbe66d343dcfc328eaab0bbbc577ae7faed4b06f88659c35e077dc20b6e645b127083c42c6c5f1a214df356d7d84445449e4303c WHIRLPOOL 06f730e3ae1531ecd4c1f5758c2dd333964e93253243484da618b8c30a1998a15b37b713e188930965e79bc999948a0f99a23b67a2f249e8ce27e2c090f5e058
+EBUILD rackspace-monitoring-0.6.0.ebuild 885 SHA256 c670b85b6474ba76be19d3a098b39778bed24a12d70a2c3270046d05ba075b01 SHA512 a28f779b8f683ae88fe27753f02bc637549bee578428f8444957b70f9f82ca463a267cd2434c6760dbbece65b1035d6ae46c9385b87e71e4cfb45e8dd71d390b WHIRLPOOL adc72211f4208e2525c86ac699228cff4418e8b072346a5d6addd7047a25ffe778554750790dfef438aa6d145ad3a26882f69fced389f1f7963cc971851655f9
+MISC ChangeLog 580 SHA256 73ae2f4574aa57fc542d320b028a2c7fa105004bf461d13138c43ff4a5028fe5 SHA512 bc4bf6ddd726ce83b4220ce1c31b00223565101350d7d00ab882767a351dd0be389628e8fba134b1987072bbb86e1792660404ea3a9790bce1f5e87e7bd56143 WHIRLPOOL 03390e0e745ab758e016c6e92ddf3fc886f9926b5b42db355294a1aad57247828d21676d11609e186c114e9b30881d0e3ce81bc98709bc8ea930fd86f867f775
 MISC metadata.xml 371 SHA256 d6489dd982f61190670f0aba46c36568540ea872b61c9778b03d4409601308ca SHA512 7f34722367dd6b2dc8907cf5e1211cabeccf968238f2cc92aac120511cb962f2fa578cfaaddeb2251b8e38226d6c627f2172b4360bc622561edcf8355300bacc WHIRLPOOL d49c4f37c6e3542d5e63a7b133085d6805289044d8f2b651782676cc18e829ba7f7874ef24fb3c81b365f940f4a7dbf43f4477d079e815946b01e9a657d3d5d9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS9YTkAAoJECRx6z5ArFrDSkYP/11ZiEP9OXktB5IVpWtXWyzc
-hQKVybmZLsS68BWVRZLvRRox0c+OzmRR0o5/fd9Cve91fTT86MzWCFsfQQkHivZV
-Ry4dmGysKDDIBn7EupDrN2BW465aVqZLKZBc7hMneZulsvMT87OyJgUXcS0ANw7P
-oj3anmyI53b/erqp5Gt91RQi9a4ZyYQWtnJrvUFPtejPoX64aRTK9rcuE18D/B+s
-I1qfTv1hb2pTBZ1OZktVy9kPttcr9R9jeknLypeWVpEjjx4wmvq/U8KPrqgfOErv
-5iol9xFj3WxXVlwdu5bqo6riTFzp9l80U6MUBmH7oM6RSKcCQDD8bRi72DrALCsB
-+JuU743N85zW/m81xlwRAKq6SMLDWanXeB9Jvih7rVQywuKBQOdEXPZIzW8nnG3N
-i7tyq8Or6ExuAiTGNc7liSBseV7IKE0hWsZZAKliOXrlRGhHI+wc27w9tCNBJSV2
-Y2DjSNanJqo25Ep+4JTXECVM5XoJ6wIDH41kjqzULpWUB/W/m3rOr9+LtwVhzOUI
-c0eUftc61eq91bbkzT5VyC06sMPC2sTVzSLgUEIy1LwSw0d+wXnMWslLrDcCtZ00
-jjlW/DSNw+alJ6UjXRs4g6kSxH2BsJYGp8ztp/44kdjMuwDGZJ6OiGKnHvBKmzNX
-mBPnM3PlR9lQ0PcKVWe9
-=Zcd1
+iQIcBAEBCAAGBQJTJxvuAAoJECRx6z5ArFrDQvEP/iy3XRuN7thqRgZrBG1zQMG7
+xRFlUwOYdpuO6A0k0SDflDAcH0I/vMQ9mfi/yT2lVpOm+wvRg/0AY7K7q5paAG+z
+FGCiiLujJs62IdODc+fbgS1BhMguCAYjsALpZrgHQEYnWm/8Czq6FTPzuB/rEjlp
+kTVIvamexlPX8JK1ugyRoJmf+6i/GlpR+slwvrsdbztQ3Far87M1Sv7An6rSIXCv
+1Wh0rNqb5OnJ5d8ty/3EX1ZOy2fWJg7Oao28L4Ijmhu/si4vQ9MlmgQ6w4xFDZVc
+q/T0IDcz6IyTX5SSsG3DrEsDnh4origzS39mSnwpV9ZqIjDMRR/3vuUJsa01kbCs
+Pa6XnPy0YUPPfljuz9m8QznB/Q9Y4Zmfw83P+e2tvE6vA5mV7xYQ66w0jlnHEVq6
+2hmUaeGQshwFD7zQSTqcjOIuKPxvIxMuu0Jpt+jfpgCxZ+bdq1tCWiWXIn+jj6i6
+jxUu5OeKdNxF2y5HW4m/pqm13/GBZm3zB9441VhhUbJZNiPHhBDoFiSreT8e7gO8
+54vNO3BQvxkxm6gFhroBWHkmwROUd4B7M/6/kO/vq1zXrWx8FI0CsQq1Lix/vCkz
+IZAfdtPYukH8j9dGzEY83yzkhou+j9hyh/DMgh9Yu9AYQo4YpjT2N6uEW+JIkd8t
+ZgJ1W3vCt6JymRipOhmd
+=y8Fv
 -----END PGP SIGNATURE-----
