@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/rackspace-monitoring
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-monitoring/ChangeLog,v 1.1 2014/02/08 01:13:13 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/rackspace-monitoring/ChangeLog,v 1.2 2014/03/17 15:59:03 prometheanfire Exp $
+
+*rackspace-monitoring-0.6.0 (17 Mar 2014)
+
+  17 Mar 2014; Matthew Thode <prometheanfire@gentoo.org>
+  +rackspace-monitoring-0.6.0.ebuild:
+  bump
 
 *rackspace-monitoring-0.5.4 (08 Feb 2014)
 
